hphp/test/zend/bad/ext/standard/tests/file/chown.php
<?php
chown("sjhgfskhagkfdgskjfhgskfsdgfkdsajf", NULL);
echo "ALIVE\n";
?>